# xradarsat2

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  publish.yml  upstream-dev.yaml
PyProjects/: radarSat2_xarray_reader.py  xml_reader.py
PyProjects/docs/: Installation.rst  conf.py  index.rst
PyProjects/src/radarSat2_xarray_reader/: radarSat2_xarray_reader.py
ci/: install-upstream-dev.sh
ci/requirements/: docs.yaml  environment.yaml
docs/: Installation.rst  conf.py  doc_xradarsat2.ipynb  index.rst  modules.rst  radarSat2_xarray_reader.rst
docs/_build/doctrees/: Installation.doctree  doc_xradarsat2.doctree  environment.pickle  index.doctree  modules.doctree  radarSat2_xarray_reader.doctree
docs/_build/doctrees/nbsphinx/: doc_xradarsat2.ipynb
docs/_build/html/: .buildinfo  Installation.html  doc_xradarsat2.html  genindex.html  index.html  modules.html  objects.inv  radarSat2_xarray_reader.html  search.html  searchindex.js
docs/_build/html/_sources/: Installation.rst.txt  doc_xradarsat2.ipynb.txt  index.rst.txt  modules.rst.txt
end2end/: check_opening_datatree_radarsat2.py
src/radarSat2_xarray_reader/: radarSat2_xarray_reader.py
src/xradarsat2/: __init__.py  radarSat2_tiff_reader.py  radarSat2_xarray_reader.py  utils.py  xradarsat2-config.yaml
src/xradarsat2/tests/: test_radarSat2_xarray_reader.py
test/: test_opening_datatree_radarsat2.py
